database uploader service completed

--- a/packages/timeseries-db/package.json
+++ b/packages/timeseries-db/package.json
@@ -8,6 +8,9 @@
     "migrate:up": "node-pg-migrate up",
     "migrate:down": "node-pg-migrate down"
   },
+  "exports":{
+    ".":"./src/index.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
