--- a/apps/db-upload/package.json
+++ b/apps/db-upload/package.json
@@ -3,12 +3,16 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "dev":"bun run index.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "common": "*"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5",
+    "timeseries-db": "*"  
   },
   "dependencies": {
     "redis": "^5.10.0"
